--- a/nodes/datahub-output.html
+++ b/nodes/datahub-output.html
@@ -1,7 +1,6 @@
 <script type="text/javascript">
-(function() {
   RED.nodes.registerType('datahub-output', {
-    category: 'output',
+    category: 'DataHub-NATS',
     color: '#ff9f43',
     defaults: {
       name: { value: '' },
@@ -10,15 +9,14 @@
     },
     inputs: 1,
     outputs: 1,
-    icon: 'white/datahub-output.svg',
-    label: function() {
-      return this.name || `DataHub Output ${this.providerId || ''}`;
+    icon: "white/datahub-output.svg",
+    label: function () {
+      return this.name || `Output ${this.providerId || ''}`;
     },
-    labelStyle: function() {
+    labelStyle: function () {
       return this.name ? 'node_label_italic' : '';
     }
   });
-})();
 </script>
 
 <div class="form-row">
@@ -33,4 +31,4 @@
   <label for="node-input-providerId"><i class="fa fa-id-badge"></i> Provider ID</label>
   <input type="text" id="node-input-providerId" placeholder="nodered">
 </div>
-<p>Send JSON payloads (including nested structures). The node auto-registers variables based on the object keys and publishes them to the configured provider. Nested objects become dot-separated keys (e.g. <code>folder.status</code>).</p>
+<p>Send JSON payloads to this node. Nested objects automatically become dot-separated keys (e.g. <code>{ diagnostics: { status_text: "ok" } }</code> ⇒ <code>diagnostics.status_text</code>).</p>
