Tweak config help text

--- a/nodes/uos-config.html
+++ b/nodes/uos-config.html
@@ -102,7 +102,7 @@
     <li><strong>Host / Port</strong> – IP and NATS port of the controller (default <code>127.0.0.1:49360</code>).</li>
     <li><strong>Client Name</strong> – Friendly identifier used in NATS connection logs.</li>
     <li><strong>Client ID / Secret</strong> – OAuth credentials from your u-OS Control Center client.</li>
-    <li><strong>Token URL</strong> – Optional; defaults to <code>https://&lt;Host&gt;/oauth2/token</code> if left empty.</li>
     <li><strong>Scope</strong> – Space separated scopes; e.g. <code>hub.variables.provide hub.variables.readwrite</code>.</li>
+    <li><strong>Granted scopes</strong> – Click <em>Refresh</em> to show what the token endpoint actually returns for this client.</li>
   </ul>
 </script>
